[package]
name = "glfn"
version = "0.1.0"
authors = ["viri <hi@viri.moe>"]
edition = "2018"
# description = "..."
documentation = "https://docs.rs/glfn"
readme = "README.md"
# homepage = "..."
repository = "https://github.com/notviri/glfn/"
license = "Zlib"
# keywords = ["...", "..."]
# categories = ["...", "..."]
# build = "rel/path/to/build.rs"
include = ["src/**/*.rs", "Cargo.toml"]

[dependencies]
roxmltree = "0.13" # pure rust high-perf read only xml parser
